--- a/src/app/livros/livros-cadastro/livros-cadastro.component.html
+++ b/src/app/livros/livros-cadastro/livros-cadastro.component.html
@@ -1,11 +1,39 @@
 <ion-header>
-    <ion-toolbar color="primary">
-        <ion-buttons slot="start">
-            <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title>Cadastro de livros</ion-title>
-    </ion-toolbar>
+  <ion-toolbar color="primary">
+      <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Cadastro de livros</ion-title>
+  </ion-toolbar>
 </ion-header>
 <ion-content>
-    
+  <form [formGroup]="livrosForm">
+      <ion-item>
+          <ion-label position="floating">Titulo:</ion-label>
+          <ion-input formControlName="titulo" type="text"></ion-input>
+      </ion-item>
+      <ion-item>
+          <ion-label position="floating">ISBN:</ion-label>
+          <ion-input formControlName="isbn" type="number"></ion-input>
+      </ion-item>
+      <ion-item>
+          <ion-label position="floating">N de Páginas:</ion-label>
+          <ion-input formControlName="paginas" type="number"></ion-input>
+      </ion-item>
+      <ion-item>
+          <ion-label>Autor:</ion-label>
+          <ion-select>
+            <ion-select-option value="1">Teste 1</ion-select-option>
+            <ion-select-option value="2">Teste 2</ion-select-option>
+          </ion-select>
+        </ion-item>
+      <ion-item>
+          <ion-label position="floating">Preço:</ion-label>
+          <ion-input formControlName="preco" type="number"></ion-input>
+      </ion-item>
+      <ion-item>
+          <ion-label position="floating">Imagem:</ion-label>
+          <ion-input formControlName="imagem" type="number"></ion-input>
+      </ion-item>        
+  </form>  
 </ion-content>
