--- a/src/app/livros/livros.page.html
+++ b/src/app/livros/livros.page.html
@@ -9,11 +9,6 @@
 
 <ion-content>
   <ion-list>
-    <ion-list-header>
-      Livros disponíveis
-    </ion-list-header>
-
-
     <ion-item-sliding *ngFor="let livro of livros">  
     
       <ion-item>
@@ -22,14 +17,12 @@
         </ion-avatar>
 
         <ion-label>
-          <h2>{{livro.nome}}</h2>
-          <h3>Valor: 
-            <ion-text color="danger">
-              <strong>{{livro.preco | currency: 'R$ '}}</strong>
-            </ion-text>
-          </h3>        
-          <h4>Lançamento: {{livro.dataLancamento | date: 'dd/MM/yyyy' }}</h4>
+          <h2>{{livro.titulo}}</h2>
+          <h4>Autor: </h4>        
+          <h4>ISBN: {{livro.isbn}}</h4>        
+          <h4>Pag: {{livro.paginas}}</h4>
         </ion-label> 
+        <ion-label slot="end" color="danger">{{livro.preco}}</ion-label>
       </ion-item>      
 
       <ion-item-options side="end">
