--- a/src/app/livros/livros.page.html
+++ b/src/app/livros/livros.page.html
@@ -18,7 +18,7 @@
 
         <ion-label>
           <h2>{{livro.titulo}}</h2>
-          <h4>Autor: </h4>        
+          <h4>Autor: {{livro.autor}}</h4>        
           <h4>ISBN: {{livro.isbn}}</h4>        
           <h4>Pag: {{livro.paginas}}</h4>
         </ion-label> 
